# UniContract

./: README.md  console.py  main.py  partner.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-app.yml
sample/: partner.contract
sample/datastore/: ICollection.contract  IConnection.contract  IDataStore.contract  IEntity.contract
sample/datastore/dotnet/DataStoring/: ICollection.cs  IConnection.cs  IDataStore.cs  IEntity.cs
tests/: dotnet_code_helper.py  java_code_helper.py  python_code_helper.py  test_build.py  test_cli.py  test_emitter_dotnet.py  test_emitter_java.py  test_emitter_json.py  test_emitter_python.py  test_import.py  test_linter_semantic_checker.py
unicontract/: Engine.py  __main__.py  configuration.json
unicontract/elements/: ElementBuilder.py  ElementVisitor.py  Elements.py
unicontract/emitters/: DotnetEmitter.py  DotnetEmmiter.py  JavaEmitter.py  JsonEmitter.py  PythonEmitter.py
unicontract/grammar/: UniContractGrammar.g4  UniContractGrammar.py  UniContractGrammarListener.py  UniContractGrammarVisitor.py  UniContractLexer.g4  UniContractLexer.py
unicontract/linters/: SemanticChecker.py
